@@ -1,1 +1,2 @@
 src/gconf-cleaner.c
+src/main.c
