@@ -1,0 +1,1 @@
+GTK_REQUIRED=2.6
